--- a/style.css
+++ b/style.css
@@ -4,16 +4,19 @@ body {
 }
 
 header {
+    width: 100%;
     font-size: 300%;
     display: flex;
     justify-content: space-evenly;
-    background-color: gray;
+    background-color: rgb(0, 0, 0);
     margin: 5% none;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    margin-top: 20%;
+    margin-bottom: 20%;
 }
 
 .Brow {
-    padding: 10%;
-    margin: 5%;
     text-decoration: none;
     color: darkgray;
 }
@@ -30,15 +33,17 @@ section {
     display: flex;
     flex-direction: column;
     padding: 5% 10%;
+    max-width: 25%;
 }
 
 .logo {
-    max-width: 700px;
-    max-height: 700px;
+    margin-top: 10%;
+    max-width: 800px;
+    max-height: 800px;
     width: 70%;
     height: 70%;
     border-radius: 50%;
-    padding: 5%;
+    padding: 2%;
 }
 
 h1 {
@@ -48,7 +53,7 @@ h1 {
 }
 
 h3 {
-    font-size: 300%;
+    font-size: 200%;
     color: darkgray;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -61,11 +66,10 @@ h3 {
 }
 
 .foto {
-    display: block;
-    margin: 5% 0%;
     padding: 4% 2%;
-    width: 30%;
+    width: 50%;
     height: auto;
+    min-width: 400px;
 }
 
 footer {
