--- a/style.css
+++ b/style.css
@@ -1,115 +1,120 @@
-                                                                                                    body {
-                                                                                                        margin: 0px;
-                                                                                                        padding: 0px;
-                                                                                                    }
-                                                                                                    
-                                                                                                    header {
-                                                                                                        width: 100%;
-                                                                                                        font-size: 300%;
-                                                                                                        display: flex;
-                                                                                                        justify-content: space-evenly;
-                                                                                                        background-color: rgb(0, 0, 0);
-                                                                                                        margin: 5% none;
-                                                                                                        padding-top: 20%;
-                                                                                                        padding-bottom: 20%;
-                                                                                                        margin-top: 20%;
-                                                                                                        margin-bottom: 20%;
-                                                                                                    }
-                                                                                                    
-                                                                                                    .Brow {
-                                                                                                        text-decoration: none;
-                                                                                                        color: darkgray;
-                                                                                                    }
-                                                                                                    
-                                                                                                    section {
-                                                                                                        display: flex;
-                                                                                                        /*flex-wrap: wrap;
-                                                                                                        justify-content: space-around;*/
-                                                                                                        margin: 0%;
-                                                                                                    }
-                                                                                                    
-                                                                                                    .hello {
-                                                                                                        display: flex;
-                                                                                                        flex-direction: column;
-                                                                                                        padding: 5% 10%;
-                                                                                                    }
-                                                                                                    
-                                                                                                    .logo {
-                                                                                                        margin-top: 10%;
-                                                                                                        width: 600px;
-                                                                                                        height: 600px;
-                                                                                                        border-radius: 50%;
-                                                                                                        padding: 2%;
-                                                                                                    }
-                                                                                                    
-                                                                                                    h1 {
-                                                                                                        font-size: 500%;
-                                                                                                        color: darkgray;
-                                                                                                        font-family: Arial, Helvetica, sans-serif;
-                                                                                                    }
-                                                                                                    
-                                                                                                    h3 {
-                                                                                                        font-size: 200%;
-                                                                                                        color: darkgray;
-                                                                                                        font-family: Arial, Helvetica, sans-serif;
-                                                                                                    }
-                                                                                                    
-                                                                                                    .gallery {
-                                                                                                        display: flex;
-                                                                                                        /*flex-wrap: wrap;*/
-                                                                                                        justify-content: space-around;
-                                                                                                        overflow-x: auto;
-                                                                                                    }
-                                                                                                    
-                                                                                                    .foto {
-                                                                                                        padding: 4% 2%;
-                                                                                                        width: 50%;
-                                                                                                        height: auto;
-                                                                                                        min-width: 400px;
-                                                                                                    }
-                                                                                                    
-                                                                                                    footer {
-                                                                                                        display: flex;
-                                                                                                        justify-content: center;
-                                                                                                        padding-top: 50%;
-                                                                                                        padding-bottom: 50%;
-                                                                                                    }
-                                                                                                    
-                                                                                                    @media (max-width: 600px) {
-                                                                                                        section {
-                                                                                                            display: flex;
-                                                                                                            flex-direction: column;
-                                                                                                            padding: 0%;
-                                                                                                        }
-                                                                                                        .hello {
-                                                                                                            width: 100%;
-                                                                                                            color: brown;
-                                                                                                            background-color: blueviolet;
-                                                                                                            padding: 5%;
-                                                                                                        }
-                                                                                                        h1 {
-                                                                                                            justify-content: center;
-                                                                                                            font-size: 30%;
-                                                                                                            padding: 8%;
-                                                                                                            align-items: center;
-                                                                                                            font-size: 300%;
-                                                                                                        }
-                                                                                                        h3 {
-                                                                                                            font-size: 160%;
-                                                                                                            padding-bottom: 6%;
-                                                                                                        }
-                                                                                                        .logo {
-                                                                                                            width: 90%;
-                                                                                                            height: 90%;
-                                                                                                        }
-                                                                                                        header {
-                                                                                                            flex-direction: column;
-                                                                                                            display: flex;
-                                                                                                            justify-content: space-evenly;
-                                                                                                            align-items: center;
-                                                                                                        }
-                                                                                                        .Brow {
-                                                                                                            text-decoration: none;
-                                                                                                            color: darkgray;
-                                                                                                        }
-                                                                                                    }
+    body {
+        margin: 0px;
+        padding: 0px;
+    }
+    
+    а {}
+    
+    header {
+        width: 100%;
+        font-size: 300%;
+        display: flex;
+        justify-content: space-evenly;
+        background-color: rgb(48, 45, 45);
+        margin: 5% none;
+        padding-top: 20%;
+        padding-bottom: 20%;
+        margin-top: 20%;
+        margin-bottom: 20%;
+        font-family: 'Poiret One', cursive;
+    }
+    
+    .Brow {
+        text-decoration: none;
+        color: darkgray;
+    }
+    
+    section {
+        display: flex;
+        /*flex-wrap: wrap;
+    justify-content: space-around;*/
+        margin: 0%;
+    }
+    
+    .hello {
+        display: flex;
+        flex-direction: column;
+        padding: 5% 10%;
+    }
+    
+    .logo {
+        margin-top: 5%;
+        margin-right: 5%;
+        width: 700px;
+        height: 700px;
+        border-radius: 50%;
+        padding: 2%;
+    }
+    
+    h1 {
+        font-size: 500%;
+        color: darkgray;
+        align-content: center;
+        font-family: 'Playfair Display SC', serif;
+    }
+    
+    h3 {
+        font-size: 200%;
+        color: darkgray;
+        font-family: 'Poiret One', cursive;
+    }
+    
+    .gallery {
+        display: flex;
+        /*flex-wrap: wrap;*/
+        justify-content: space-around;
+        overflow-x: auto;
+    }
+    
+    .foto {
+        padding: 4% 2%;
+        width: 50%;
+        height: auto;
+        min-width: 400px;
+    }
+    
+    footer {
+        display: flex;
+        justify-content: center;
+        padding-top: 50%;
+        padding-bottom: 50%;
+    }
+    
+    @media (max-width: 600px) {
+        section {
+            display: flex;
+            flex-direction: column-reverse;
+            padding: 0%;
+        }
+        .hello {
+            width: 100%;
+            color: brown;
+            background-color: rgb(255, 255, 255);
+            padding: 5%;
+        }
+        h1 {
+            justify-content: center;
+            font-size: 30%;
+            padding: 8%;
+            align-items: center;
+            font-size: 300%;
+        }
+        h3 {
+            font-size: 160%;
+            padding-bottom: 6%;
+        }
+        .logo {
+            width: 90%;
+            height: 90%;
+        }
+        header {
+            flex-direction: column;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+        .Brow {
+            text-decoration: none;
+            color: darkgray;
+        }
+    }
