--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@
     h1 {
         font-size: 500%;
         color: rgb(255, 255, 255);
-        align-content: center;
         font-family: 'Poiret One', cursive;
     }
     
@@ -68,10 +67,9 @@
     }
     
     .foto {
-        padding: 4% 2%;
+        padding: 3% 1%;
         width: 50%;
         height: auto;
-        min-width: 400px;
     }
     
     footer {
@@ -89,34 +87,45 @@
             padding: 0%;
         }
         .hello {
-            width: 100%;
             color: brown;
-            background-color: rgb(255, 255, 255);
-            padding: 5%;
+            padding: 0% 6%;
         }
         h1 {
-            justify-content: center;
-            font-size: 30%;
-            padding: 8%;
-            align-items: center;
-            font-size: 300%;
+            padding: 0%;
+            font-size: 180%;
+            align-self: center;
+            margin: 3%;
         }
         h3 {
-            font-size: 160%;
-            padding-bottom: 6%;
+            font-size: 90%;
+            padding-bottom: 21%;
+            text-align: center;
         }
         .logo {
-            width: 90%;
-            height: 90%;
+            width: 80%;
+            height: 80%;
+            padding-top: 10%;
+            padding-bottom: 0%;
+            padding-left: 10%;
+            padding-right: 10%;
+            margin: 0%;
         }
         header {
             flex-direction: column;
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            padding: 12% 0%;
+            background-color: rgb(255, 255, 255);
         }
         .Brow {
+            font-size: 50%;
             text-decoration: none;
             color: darkgray;
+        }
+        .foto {
+            width: 60%;
+            height: auto;
+            padding-top: 10%;
         }
     }
