--- a/style1.css
+++ b/style1.css
@@ -1,12 +1,12 @@
 * {
-    margin: 0;
+    margin: 1%;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
     position: relative;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poiret One', cursive;
 }
 
 section.gallery {
@@ -19,17 +19,6 @@ h2.title {
     font-weight: bold;
     text-align: center;
     padding-bottom: 45px;
-}
-
-h2.title:after {
-    content: "";
-    position: absolute;
-    width: 100px;
-    height: 3px;
-    background-color: #111111;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 .gallery-list {
@@ -46,15 +35,17 @@ h2.title:after {
     flex: 25%;
     overflow: hidden;
     position: relative;
+    padding: ;
 }
 
 .gallery-item-hover {
+    margin: 00.2%;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(98, 97, 97, 0.7);
     color: #ffffff;
     display: flex;
     justify-content: center;
@@ -67,6 +58,7 @@ h2.title:after {
 
 .gallery-item:hover .gallery-item-hover {
     opacity: 1;
+    margin: 0.2%;
 }
 
 .gallery-item:hover img {
@@ -77,6 +69,20 @@ h2.title:after {
     max-width: 100%;
     height: auto;
     transition: all .5s ease;
+}
+
+footer {
+    margin: 5%;
+}
+
+a.index {
+    font-size: 200%;
+    text-decoration: none;
+    color: rgb(103, 103, 103);
+}
+
+a.index:hover {
+    color: black;
 }
 
 @media (max-width: 991px) {
